src/antlr/AqlParser.ts
// Generated from src/antlr/Aql.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AqlListener } from "./AqlListener";
import { AqlVisitor } from "./AqlVisitor";


export class AqlParser extends Parser {
	public static readonly EHR = 1;
	public static readonly AND = 2;
	public static readonly OR = 3;
	public static readonly XOR = 4;
	public static readonly NOT = 5;
	public static readonly IN = 6;
	public static readonly MATCHES = 7;
	public static readonly TERMINOLOGY = 8;
	public static readonly LIKE = 9;
	public static readonly ILIKE = 10;
	public static readonly SIMILARTO = 11;
	public static readonly SELECT = 12;
	public static readonly TOP = 13;
	public static readonly FORWARD = 14;
	public static readonly BACKWARD = 15;
	public static readonly AS = 16;
	public static readonly CONTAINS = 17;
	public static readonly WHERE = 18;
	public static readonly ORDERBY = 19;
	public static readonly OFFSET = 20;
	public static readonly LIMIT = 21;
	public static readonly FROM = 22;
	public static readonly DESCENDING = 23;
	public static readonly ASCENDING = 24;
	public static readonly DESC = 25;
	public static readonly ASC = 26;
	public static readonly EXISTS = 27;
	public static readonly VERSION = 28;
	public static readonly VERSIONED_OBJECT = 29;
	public static readonly ALL_VERSIONS = 30;
	public static readonly LATEST_VERSION = 31;
	public static readonly DISTINCT = 32;
	public static readonly JOINON = 33;
	public static readonly PERSON = 34;
	public static readonly AGENT = 35;
	public static readonly ORGANISATION = 36;
	public static readonly GROUP = 37;
	public static readonly FUNCTION_IDENTIFIER = 38;
	public static readonly EXTENSION_IDENTIFIER = 39;
	public static readonly BOOLEAN = 40;
	public static readonly NODEID = 41;
	public static readonly ARCHETYPEID = 42;
	public static readonly IDENTIFIER = 43;
	public static readonly DEMOGRAPHIC = 44;
	public static readonly INTEGER = 45;
	public static readonly FLOAT = 46;
	public static readonly DATE = 47;
	public static readonly PARAMETER = 48;
	public static readonly UNIQUEID = 49;
	public static readonly COMPARABLEOPERATOR = 50;
	public static readonly URIVALUE = 51;
	public static readonly REGEXPATTERN = 52;
	public static readonly STRING = 53;
	public static readonly EXP_STRING = 54;
	public static readonly SLASH = 55;
	public static readonly COMMA = 56;
	public static readonly SEMICOLON = 57;
	public static readonly OPEN_BRACKET = 58;
	public static readonly CLOSE_BRACKET = 59;
	public static readonly OPEN_PAR = 60;
	public static readonly CLOSE_PAR = 61;
	public static readonly OPEN_CURLY = 62;
	public static readonly CLOSE_CURLY = 63;
	public static readonly ARITHMETIC_BINOP = 64;
	public static readonly COUNT = 65;
	public static readonly AVG = 66;
	public static readonly BOOL_AND = 67;
	public static readonly BOOL_OR = 68;
	public static readonly EVERY = 69;
	public static readonly MAX = 70;
	public static readonly MIN = 71;
	public static readonly SUM = 72;
	public static readonly SUBSTR = 73;
	public static readonly STRPOS = 74;
	public static readonly SPLIT_PART = 75;
	public static readonly BTRIM = 76;
	public static readonly CONCAT = 77;
	public static readonly CONCAT_WS = 78;
	public static readonly DECODE = 79;
	public static readonly ENCODE = 80;
	public static readonly FORMAT = 81;
	public static readonly INITCAP = 82;
	public static readonly LEFT = 83;
	public static readonly LENGTH = 84;
	public static readonly LPAD = 85;
	public static readonly LTRIM = 86;
	public static readonly REGEXP_MATCH = 87;
	public static readonly REGEXP_REPLACE = 88;
	public static readonly REGEXP_SPLIT_TO_ARRAY = 89;
	public static readonly REGEXP_SPLIT_TO_TABLE = 90;
	public static readonly REPEAT = 91;
	public static readonly REPLACE = 92;
	public static readonly REVERSE = 93;
	public static readonly RIGHT = 94;
	public static readonly RPAD = 95;
	public static readonly RTRIM = 96;
	public static readonly TRANSLATE = 97;
	public static readonly CORR = 98;
	public static readonly COVAR_POP = 99;
	public static readonly COVAR_SAMP = 100;
	public static readonly REGR_AVGX = 101;
	public static readonly REGR_AVGY = 102;
	public static readonly REGR_COUNT = 103;
	public static readonly REGR_INTERCEPT = 104;
	public static readonly REGR_R2 = 105;
	public static readonly REGR_SLOPE = 106;
	public static readonly REGR_SXX = 107;
	public static readonly REGR_SXY = 108;
	public static readonly REGR_SYY = 109;
	public static readonly STDDEV = 110;
	public static readonly STDDEV_POP = 111;
	public static readonly STDDEV_SAMP = 112;
	public static readonly VARIANCE = 113;
	public static readonly VAR_POP = 114;
	public static readonly VAR_SAMP = 115;
	public static readonly RAW_COMPOSITION_ENCODE = 116;
	public static readonly WS = 117;
	public static readonly RULE_query = 0;
	public static readonly RULE_queryExpr = 1;
	public static readonly RULE_select = 2;
	public static readonly RULE_topExpr = 3;
	public static readonly RULE_function = 4;
	public static readonly RULE_extension = 5;
	public static readonly RULE_where = 6;
	public static readonly RULE_orderBy = 7;
	public static readonly RULE_limit = 8;
	public static readonly RULE_offset = 9;
	public static readonly RULE_orderBySeq = 10;
	public static readonly RULE_orderByExpr = 11;
	public static readonly RULE_selectExpr = 12;
	public static readonly RULE_stdExpression = 13;
	public static readonly RULE_from = 14;
	public static readonly RULE_fromEHR = 15;
	public static readonly RULE_fromForeignData = 16;
	public static readonly RULE_fromExpr = 17;
	public static readonly RULE_containsExpression = 18;
	public static readonly RULE_containExpressionBool = 19;
	public static readonly RULE_contains = 20;
	public static readonly RULE_identifiedExpr = 21;
	public static readonly RULE_identifiedEquality = 22;
	public static readonly RULE_identifiedOperand = 23;
	public static readonly RULE_identifiedPath = 24;
	public static readonly RULE_predicate = 25;
	public static readonly RULE_nodePredicateOr = 26;
	public static readonly RULE_nodePredicateAnd = 27;
	public static readonly RULE_nodePredicateComparable = 28;
	public static readonly RULE_nodePredicateRegEx = 29;
	public static readonly RULE_matchesOperand = 30;
	public static readonly RULE_valueListItems = 31;
	public static readonly RULE_versionpredicate = 32;
	public static readonly RULE_versionpredicateOptions = 33;
	public static readonly RULE_standardPredicate = 34;
	public static readonly RULE_joinPredicate = 35;
	public static readonly RULE_predicateExpr = 36;
	public static readonly RULE_predicateAnd = 37;
	public static readonly RULE_predicateEquality = 38;
	public static readonly RULE_predicateOperand = 39;
	public static readonly RULE_operand = 40;
	public static readonly RULE_invokeOperand = 41;
	public static readonly RULE_invokeExpr = 42;
	public static readonly RULE_objectPath = 43;
	public static readonly RULE_pathPart = 44;
	public static readonly RULE_classExpr = 45;
	public static readonly RULE_simpleClassExpr = 46;
	public static readonly RULE_archetypedClassExpr = 47;
	public static readonly RULE_versionedClassExpr = 48;
	public static readonly RULE_versionClassExpr = 49;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"query", "queryExpr", "select", "topExpr", "function", "extension", "where", 
		"orderBy", "limit", "offset", "orderBySeq", "orderByExpr", "selectExpr", 
		"stdExpression", "from", "fromEHR", "fromForeignData", "fromExpr", "containsExpression", 
		"containExpressionBool", "contains", "identifiedExpr", "identifiedEquality", 
		"identifiedOperand", "identifiedPath", "predicate", "nodePredicateOr", 
		"nodePredicateAnd", "nodePredicateComparable", "nodePredicateRegEx", "matchesOperand", 
		"valueListItems", "versionpredicate", "versionpredicateOptions", "standardPredicate", 
		"joinPredicate", "predicateExpr", "predicateAnd", "predicateEquality", 
		"predicateOperand", "operand", "invokeOperand", "invokeExpr", "objectPath", 
		"pathPart", "classExpr", "simpleClassExpr", "archetypedClassExpr", "versionedClassExpr", 
		"versionClassExpr",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'/'", 
		"','", "';'", "'['", "']'", "'('", "')'", "'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "EHR", "AND", "OR", "XOR", "NOT", "IN", "MATCHES", "TERMINOLOGY", 
		"LIKE", "ILIKE", "SIMILARTO", "SELECT", "TOP", "FORWARD", "BACKWARD", 
		"AS", "CONTAINS", "WHERE", "ORDERBY", "OFFSET", "LIMIT", "FROM", "DESCENDING", 
		"ASCENDING", "DESC", "ASC", "EXISTS", "VERSION", "VERSIONED_OBJECT", "ALL_VERSIONS", 
		"LATEST_VERSION", "DISTINCT", "JOINON", "PERSON", "AGENT", "ORGANISATION", 
		"GROUP", "FUNCTION_IDENTIFIER", "EXTENSION_IDENTIFIER", "BOOLEAN", "NODEID", 
		"ARCHETYPEID", "IDENTIFIER", "DEMOGRAPHIC", "INTEGER", "FLOAT", "DATE", 
		"PARAMETER", "UNIQUEID", "COMPARABLEOPERATOR", "URIVALUE", "REGEXPATTERN", 
		"STRING", "EXP_STRING", "SLASH", "COMMA", "SEMICOLON", "OPEN_BRACKET", 
		"CLOSE_BRACKET", "OPEN_PAR", "CLOSE_PAR", "OPEN_CURLY", "CLOSE_CURLY", 
		"ARITHMETIC_BINOP", "COUNT", "AVG", "BOOL_AND", "BOOL_OR", "EVERY", "MAX", 
		"MIN", "SUM", "SUBSTR", "STRPOS", "SPLIT_PART", "BTRIM", "CONCAT", "CONCAT_WS", 
		"DECODE", "ENCODE", "FORMAT", "INITCAP", "LEFT", "LENGTH", "LPAD", "LTRIM", 
		"REGEXP_MATCH", "REGEXP_REPLACE", "REGEXP_SPLIT_TO_ARRAY", "REGEXP_SPLIT_TO_TABLE", 
		"REPEAT", "REPLACE", "REVERSE", "RIGHT", "RPAD", "RTRIM", "TRANSLATE", 
		"CORR", "COVAR_POP", "COVAR_SAMP", "REGR_AVGX", "REGR_AVGY", "REGR_COUNT", 
		"REGR_INTERCEPT", "REGR_R2", "REGR_SLOPE", "REGR_SXX", "REGR_SXY", "REGR_SYY", 
		"STDDEV", "STDDEV_POP", "STDDEV_SAMP", "VARIANCE", "VAR_POP", "VAR_SAMP", 
		"RAW_COMPOSITION_ENCODE", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AqlParser._LITERAL_NAMES, AqlParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AqlParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Aql.g4"; }

	// @Override
	public get ruleNames(): string[] { return AqlParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AqlParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AqlParser._ATN, this);
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AqlParser.RULE_query);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.queryExpr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public queryExpr(): QueryExprContext {
		let _localctx: QueryExprContext = new QueryExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AqlParser.RULE_queryExpr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.select();
			this.state = 103;
			this.from();
			this.state = 105;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AqlParser.WHERE) {
				{
				this.state = 104;
				this.where();
				}
			}

			this.state = 108;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AqlParser.LIMIT) {
				{
				this.state = 107;
				this.limit();
				}
			}

			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AqlParser.OFFSET) {
				{
				this.state = 110;
				this.offset();
				}
			}

			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AqlParser.ORDERBY) {
				{
				this.state = 113;
				this.orderBy();
				}
			}

			this.state = 116;
			this.match(AqlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public select(): SelectContext {
		let _localctx: SelectContext = new SelectContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AqlParser.RULE_select);
		try {
			this.state = 124;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 118;
				this.match(AqlParser.SELECT);
				this.state = 119;
				this.selectExpr();
				}
				break;
